# kore-lang

./: .gitattributes  .gitignore  CONTRIBUTING.md  LLM_GUIDE.md  README.md  WHICH_VERSION.md  build.ps1  build.sh  rename_to_kain.py  setup_llvm_deps.ps1
bootstrap/: Cargo.toml
docs/: CHECKPOINT_2026-01-17.md
kain-v1-stable/: .gitignore  Cargo.toml  LICENSE  (+2 more)
kore-v1-stable/: .gitignore  Cargo.toml  README.MD  commands.md
kore-v1-stable/bootstrap/: codegen_rust.kr  parser.kr
kore-v1-stable/bootstrap/src/: main.rs
kore-v1-stable/bootstrap/src/compiler/: codegen.rs  lexer.rs  mod.rs
kore-v1-stable/shaders/: README.md  post_processing.kr  ultimate_shader.hlsl  ultimate_shader.usf
kore-v1-stable/shaders/_intro/: sdf_raymarcher.kr  volumetric_clouds.kr
kore-v1-stable/shaders/shaderpack_01_simple/: advanced_test.hlsl  advanced_test.kr  holographic_glitch.kr  pbr_test.hlsl  simple_color.kr  simple_test.spv  texture_sample.hlsl  wave_effect.hlsl  wave_effect_new.hlsl
kore-v1-stable/shaders/unrealengine/: fractal_terrain.usf  subsurface_scattering.usf  volumetric_fog.usf
kore-v1-stable/src/: effects.rs  error.rs  lexer.rs  lib.rs  loop_test.kr  main.rs  packager.rs  parser.rs  runtime.rs  stdlib.rs  types.rs
kore-v1-stable/src/codegen/: hlsl.rs  llvm.rs  mod.rs  rust.rs  spirv.rs  usf.rs
kore-v1-stable/src/compiler/: codegen.kr.bak  compile_bootstrap.kr  lexer.kr
kore-v1-stable/src/other/: comptime.kr  wasm.kr
kore-v1-stable/stdlib/: README.md
kore-v1-stable/test/: test_rust_output.rs  test_shader.spv
kore-v1-stable/tests/kore/: async_runtime_test.kr
(+384 files in other folders)
