[package]
name = "kore"
version = "0.1.0"
edition = "2021"
authors = ["Kipp <kipp@k-os.dev>"]
description = "The Ultimate Programming Language - Rust safety + Python syntax + Lisp macros + Zig comptime"
license = "MIT"
repository = "https://github.com/kippsterr/kore"

[workspace]

[lib]
name = "kore"
path = "src/lib.rs"

[[bin]]
name = "kore"
path = "src/main.rs"

[dependencies]
# Lexer
logos = "0.14"

# Parser  
chumsky = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Error reporting
ariadne = "0.4"

# Code generation
inkwell = { version = "0.4", features = ["llvm17-0", "target-x86"], optional = true }
walrus = "0.21"  # WASM manipulation
rspirv = "0.12"  # SPIR-V generation

# Runtime
tokio = { version = "1", features = ["full"] }
flume = "0.11"  # Actor channels
pyo3 = { version = "0.20", features = ["auto-initialize"] }

# Utilities
thiserror = "1"
once_cell = "1"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"  # File watching for hot reload
ctrlc = "3"   # Ctrl+C handling
toml = "0.8"
tower-lsp = "0.20"
reqwest = { version = "0.12.28", features = ["blocking", "json"] }

[features]
default = []
llvm = ["inkwell"]

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
